--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,17 +5,15 @@
     </div>
     <div class="collaps navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')" >Recipes</a></li>
-        <li><a href="#"
-          (click)="onSelect('shoping-list')"
-          >Shoping list</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shoping-list">Shoping list</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toogle" role="button">Manag <span class="caret"></span></a>
+          <a style="cursor: pointer;" class="dropdown-toogle" role="button">Manag <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer;">Save Data</a></li>
+            <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
